[package]
name = "cpu_rec_rs"
version = "1.0.1"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = "~4.4"
glob = "0.3.1"
log = "0.4.19"
simple_logger = "4.1.0"
tablestream = "0.1.3"

[dev-dependencies]
assert_approx_eq = "1.1.0"
rand = "0.8.5"
